@@ -1,3 +1,10 @@
+2009-10-13 Marek Safar  <marek.safar@gmail.com>
+
+	* KnownColors.cs: FindColorMatch has to match only predefined color
+	names ignoring system elements.
+
+	* ColorTranslator.cs: Add more predefined names.
+
 2009-07-15 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* Font.cs: implement OriginalFontName.
